--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,3 +1,10 @@
 html, body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+nav li {
+  display: flex;
+  justify-content: end;
+  margin-right: 10px;
+  list-style: none;
+}
