--- a/src/html/components/home.html
+++ b/src/html/components/home.html
@@ -1,3 +1,5 @@
 <div class="websy-view" data-view="home">
-  This is the Home page
+  <img src="/src/assets/Group 77.png"/>
+  <h1>Online Experiences</h1>
+  <h3>Join unique interactive activities led by one-of-a-kind hosts - all without leaving home</h3>
 </div>
