--- a/src/html/components/home.html
+++ b/src/html/components/home.html
@@ -1,5 +1,5 @@
 <div class="websy-view" data-view="home">
-  <img src="/src/assets/Group 77.png"/>
+  <img src="../images/Group 77 (1).png"/>
   <h1>Online Experiences</h1>
   <h3>Join unique interactive activities led by one-of-a-kind hosts - all without leaving home</h3>
 </div>
