--- a/src/less/main.less
+++ b/src/less/main.less
@@ -2,10 +2,26 @@ html, body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-nav li {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+nav {
+  height: 82px;
   display: flex;
-  justify-content: end;
-  margin-right: 10px;
+  padding: 20px 36px;
+  box-shadow: 0 2.98256px 7.4564px rgb(151, 150, 150);
+}
+
+nav svg {
+  max-width: 100px;
+}
+
+nav ul {
   list-style: none;
 }
 
