class and map init

--- a/src/html/components/home.html
+++ b/src/html/components/home.html
@@ -3,3 +3,4 @@
   <h3>Join unique interactive activities led by one-of-a-kind hosts - all without leaving home</h3>
 </div>
 
+<div id="test"></div>
