--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,30 +1,32 @@
 html, body {
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 * {
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-}
-
 nav {
   height: 82px;
-  display: flex;
   padding: 20px 36px;
   box-shadow: 0 2.98256px 7.4564px rgb(151, 150, 150);
-}
-
-nav svg {
-  max-width: 100px;
-}
-
-nav ul {
-  list-style: none;
+  background-color: #154281;
+  img {
+    max-width: 200px;
+  }
+  ul {
+    display: flex;
+    justify-content: end;
+  }
+  li {
+    list-style: none;
+    color: rgb(22, 20, 20);
+    padding: 5px;
+  }
 }
 
 h3 {
   font-weight: 100;
 }
+
