hero section, dark model pending

--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -1,6 +1,15 @@
 <div class="websy-view" data-view="home">
+
+  <div class="hero-image">
+    <img src="https://images.macrumors.com/t/rWuYVpdenGYSlgRtVb937WlK0ns=/1600x1200/smart/article-new/2020/01/Carrier-Deals.jpg" width="800px" height="500px">
+    <div class="hero-text">
+    </div>
+  </div>
+
+<div class="jumbotron jumbotron-fluid">
   <h1>Sale now on...</h1>
   <h3>Mobile phone shop, tariffs, information, online technologie & much more!</h3>
+</div>
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
     Ratione et possimus dolor quaerat, culpa quos aperiam
@@ -12,7 +21,7 @@
         maiores ad architecto nobis reiciendis.</p>
 
 
-        <div id="all-phones" class="cards-list">
+  <div id="all-phones" class="cards-list">
           
          
         </div>
