--- a/src/less/main.less
+++ b/src/less/main.less
@@ -36,6 +36,24 @@ nav {
   display: flex;
 }
 
+.hero-image {
+  display: flex;
+  justify-content: center;
+  background-color: #1b2430;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(255, 255, 255);
+}
+
 h3 {
   font-weight: 100;
 }
@@ -78,4 +96,10 @@ h3 {
 
 .card--price {
   margin-top: auto;
+}
+
+.darkmode {
+  * {
+    background-color: rgb(134, 28, 28);
+  }
 }
