--- a/src/html/views/apple.html
+++ b/src/html/views/apple.html
@@ -1,5 +1,11 @@
 <div class="websy-view" data-view="apple">
   This is the Apple page
-</div>
 
-<div class="apple-list"></div>
+<div class="apple-list">
+  <div id="all-phones" class="cards-list">
+         
+  </div>
+
+
+</div>
+</div>
