--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -1,14 +1,14 @@
 <div class="websy-view" data-view="home">
 
   <div class="hero-image">
-    <img src="https://images.macrumors.com/t/rWuYVpdenGYSlgRtVb937WlK0ns=/1600x1200/smart/article-new/2020/01/Carrier-Deals.jpg" width="800px" height="500px">
+    <img src="https://images.macrumors.com/t/rWuYVpdenGYSlgRtVb937WlK0ns=/1600x1200/smart/article-new/2020/01/Carrier-Deals.jpg" width="650px" height="400px">
     <div class="hero-text">
     </div>
   </div>
 
 <div class="jumbotron jumbotron-fluid">
   <h1>Sale now on...</h1>
-  <h3>Mobile phone shop, tariffs, information, online technologie & much more!</h3>
+  <h3>Mobile phone shop, tariffs, information, online technology & much more!</h3>
 </div>
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -24,9 +24,10 @@
   <div id="all-phones" class="cards-list">
           
          
-        </div>
+  </div>
 
-        
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus cumque officiis, repudiandae ullam dignissimos numquam nemo eaque ipsum quod magnam soluta facilis neque. Ullam, cupiditate placeat dicta quo aspernatur quisquam!</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex amet reiciendis non repellendus voluptatum quidem cupiditate, deleniti at aspernatur reprehenderit, nobis corporis odio quod, fugit eum numquam laudantium esse aliquid!</p>   
 </div>
 
 
