--- a/src/less/main.less
+++ b/src/less/main.less
@@ -32,27 +32,15 @@ nav {
   }
 }
 
-#switch-test {
-  display: flex;
-}
-
 .hero-image {
   display: flex;
   justify-content: center;
-  background-color: #1b2430;
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 83%, rgb(1, 169, 203) 100%);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
 }
 
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: rgb(255, 255, 255);
-}
 
 h3 {
   font-weight: 100;
@@ -72,11 +60,15 @@ h3 {
 }
 
 .card {
-  width: 175px;
-  font-size: 12px;
+  width: 300px;
+  font-size: 1rem;
   flex: 0 0 auto;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  border: solid 2px rgb(0, 0, 0);
+  border-radius: 20px;
+  padding: 40px;
 }
 
 .card--image {
@@ -90,15 +82,20 @@ h3 {
   align-items: center;
 }
 
+.card--title {
+  padding: 5px;
+}
+
 .card--star {
   height: 15px;
+  padding: 15px;
 }
 
 .card--price {
   margin-top: auto;
 }
 
-.darkmode {
+#darkmode {
   * {
     background-color: rgb(134, 28, 28);
   }
