home page styling

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -52,11 +52,15 @@ h3 {
   }
 }
 
+p {
+  padding: 15px;
+}
+
 .cards-list {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap: 20px;
-  overflow-x: auto;
+  justify-content: center;
 }
 
 .card {
