--- a/src/less/main.less
+++ b/src/less/main.less
@@ -70,9 +70,13 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid 2px rgb(0, 0, 0);
+  border: solid 2px;
+  box-shadow: 5px 10px 20px rgb(146, 144, 144);
   border-radius: 20px;
   padding: 40px;
+  &:hover {
+    background-color: rgb(232, 232, 232);
+  }
 }
 
 .card--image {
