--- a/src/less/main.less
+++ b/src/less/main.less
@@ -83,6 +83,7 @@ p {
   width: 100%;
   border-radius: 9px;
   margin-bottom: 9px;
+  background-color: transparent;
 }
 
 .card--stats {
@@ -105,6 +106,16 @@ p {
 
 #darkmode {
   * {
-    background-color: rgb(134, 28, 28);
+    color: rgb(134, 28, 28);
+  }
+}
+
+.dark-mode {
+  background-color: #001a3e;
+  color: rgb(232, 232, 232);
+  .card {
+    &:hover {
+      background-color: rgb(89, 85, 85);
+    }
   }
 }
