background dark changed

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -105,7 +105,7 @@ p {
 }
 
 .dark-mode {
-  background-color: #001a3e;
+  background-color: #02012e;
   color: rgb(232, 232, 232);
   .card {
     &:hover {
