--- a/src/html/views/apple.html
+++ b/src/html/views/apple.html
@@ -1,11 +1,8 @@
 <div class="websy-view" data-view="apple">
   This is the Apple page
 
-<div class="apple-list">
-  <div id="all-phones" class="cards-list">
+  <div id="apple-phones" class="cards-list">
          
   </div>
 
-
-</div>
 </div>
