apple and samsung pages rendered

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -109,7 +109,7 @@ p {
   color: rgb(232, 232, 232);
   .card {
     &:hover {
-      background-color: rgb(89, 85, 85);
+      background-color: #154281;
     }
   }
 }
