--- a/src/html/views/samsung.html
+++ b/src/html/views/samsung.html
@@ -1,3 +1,8 @@
 <div class="websy-view" data-view="samsung">
   This is the Samsung page
+
+  <div id="samsung-phones" class="cards-list">
+         
+  </div>
+
 </div>
