--- a/src/html/views/apple.html
+++ b/src/html/views/apple.html
@@ -1,8 +1,9 @@
 <div class="websy-view" data-view="apple">
-  This is the Apple page
-
+  <div class="apple-logo">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Apple_logo_hollow.svg/1720px-Apple_logo_hollow.svg.png" width="60px">
+</div>
   <div id="apple-phones" class="cards-list">
-         
+
   </div>
 
 </div>
