--- a/src/html/views/samsung.html
+++ b/src/html/views/samsung.html
@@ -1,5 +1,7 @@
 <div class="websy-view" data-view="samsung">
-  This is the Samsung page
+<div class="samsung-logo">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Samsung_Logo.svg/1280px-Samsung_Logo.svg.png" width="170px">
+</div>
 
   <div id="samsung-phones" class="cards-list">
          
