--- a/src/less/main.less
+++ b/src/less/main.less
@@ -112,4 +112,24 @@ p {
       background-color: #154281;
     }
   }
+  .apple-logo {
+    background-color: rgb(255, 255, 255);
+  }
+  .samsung-logo {
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+.apple-logo {
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+  margin-bottom: 10px;
+}
+
+.samsung-logo {
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+  margin-bottom: 10px;
 }
