--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -21,6 +21,10 @@
         maiores ad architecto nobis reiciendis.</p>
 
 
+     <div id="dropdown-2"style="width: 200px; position: relative;">
+
+      </div>
+
   <div id="all-phones" class="cards-list">
           
          
