--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -20,11 +20,16 @@
        Sed explicabo expedita voluptatibus officia officiis asperiores
         maiores ad architecto nobis reiciendis.</p>
 
-
+<div class="filters">
      <div id="dropdown-2"style="width: 200px; position: relative;">
 
       </div>
 
+      <div id="dropdown-3"style="width: 200px; position: relative;">
+
+      </div>
+
+  </div>
   <div id="all-phones" class="cards-list">
           
          
