filters added, rendering correctly

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -118,6 +118,14 @@ p {
   .samsung-logo {
     background-color: rgb(255, 255, 255);
   }
+  #dropdown-2 {
+    border: 1px solid rgb(255, 252, 252);
+    margin: 5px;
+  }
+  #dropdown-3 {
+    border: 1px solid rgb(255, 251, 251);
+    margin: 5px;
+  }
 }
 
 .apple-logo {
@@ -136,4 +144,19 @@ p {
 
 .filters {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+#dropdown-2 {
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 15px;
+  margin: 5px;
+}
+
+#dropdown-3 {
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 15px;
+  margin: 5px;
 }
