--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -21,11 +21,11 @@
         maiores ad architecto nobis reiciendis.</p>
 
 <div class="filters">
-     <div id="dropdown-2"style="width: 200px; position: relative;">
+     <div id="dropdown-2"style="width: 150px; height: 50px; position: relative; text-align: center;">
 
       </div>
 
-      <div id="dropdown-3"style="width: 200px; position: relative;">
+      <div id="dropdown-3"style="width: 150px; height: 50px; position: relative; text-align: center;">
 
       </div>
 
