render phone details success

--- a/src/html/views/stores.html
+++ b/src/html/views/stores.html
@@ -1,4 +1,6 @@
 <div class="websy-view" data-view="stores">
   
-<h1>Store locator</h1>
+    <div class="store-map">
+          <h3>Find your nearest store</h3>
+  
   </div>
