--- a/src/less/main.less
+++ b/src/less/main.less
@@ -160,3 +160,21 @@ p {
   border-radius: 15px;
   margin: 5px;
 }
+
+.phone-detail-card {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+  .card {
+    width: 900px;
+    font-size: 1rem;
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid 2px;
+    box-shadow: 5px 10px 20px rgb(146, 144, 144);
+    border-radius: 20px;
+    padding: 40px;
+  }
+}
