icon shopping cart and page routed

--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -19,7 +19,9 @@
     <p style="text-align: center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi aperiam similique praesentium doloremque dolores doloribus deserunt mollitia dolorum?
        Sed explicabo expedita voluptatibus officia officiis asperiores
         maiores ad architecto nobis reiciendis.</p>
+<hr>
 
+        <h2 class="top-picks">Our Top Picks</h2>
 <div class="filters">
      <div id="dropdown-2"style="width: 150px; height: 50px; position: relative; text-align: center;">
 
@@ -30,6 +32,8 @@
       </div>
 
   </div>
+
+
   <div id="all-phones" class="cards-list">
           
          
