--- a/src/less/main.less
+++ b/src/less/main.less
@@ -7,29 +7,72 @@ html, body {
   box-sizing: border-box;
 }
 
-nav {
-  display: flex;
-  height: 82px;
-  padding: 20px 36px;
-  box-shadow: 0 2.98256px 7.4564px rgb(151, 150, 150);
-  background-color: #154281;
-  align-items: center;
-  justify-content: space-between;
-  img {
-    max-width: 200px;
-  }
-  ul {
+
+.hamburger {
+  border: 0;
+  background-color: transparent;
+  color: rgb(232, 232, 232);
+  nav {
     display: flex;
-    justify-content: end;
-    height: 100%;
+    height: 82px;
+    padding: 20px 36px;
+    box-shadow: 0 2.98256px 7.4564px rgb(151, 150, 150);
+    background-color: #154281;
+    align-items: center;
+    justify-content: space-between;
+    img {
+      max-width: 200px;
+    }
+    ul {
+      display: flex;
+      justify-content: end;
+      height: 100%;
+    }
+    li {
+      display: flex;
+      list-style: none;
+      color: rgb(22, 20, 20);
+      padding: 5px;
+      height: 100%;
+    }
   }
-  li {
+}
+
+
+@media only screen and ( min-width : 550px ) {
+  .hamburger {
+    display: none;
+  }
+  nav {
     display: flex;
-    list-style: none;
-    color: rgb(22, 20, 20);
-    padding: 5px;
-    height: 100%;
+    height: 82px;
+    padding: 20px 36px;
+    box-shadow: 0 2.98256px 7.4564px rgb(151, 150, 150);
+    background-color: #154281;
+    align-items: center;
+    justify-content: space-between;
+    img {
+      max-width: 200px;
+    }
+    ul {
+      display: flex;
+      justify-content: end;
+      height: 100%;
+    }
+    li {
+      display: flex;
+      list-style: none;
+      color: rgb(22, 20, 20);
+      padding: 5px;
+      height: 100%;
+    }
   }
+}
+
+.cart {
+  color: rgb(255, 255, 255);
+  margin-top: 5px;
+  margin-left: 5px;
 }
 
 .hero-image {
@@ -177,4 +220,8 @@ p {
     border-radius: 20px;
     padding: 40px;
   }
+}
+
+.top-picks {
+  text-align: center;
 }
