--- a/src/less/main.less
+++ b/src/less/main.less
@@ -75,6 +75,14 @@ html, body {
   margin-left: 5px;
 }
 
+.add-cart {
+  width: 200px;
+  background-color: rgb(8, 146, 8);
+  color: rgb(255, 248, 248);
+  padding: 10px;
+  border-radius: 10px;
+}
+
 .hero-image {
   display: flex;
   justify-content: center;
