--- a/src/less/main.less
+++ b/src/less/main.less
@@ -69,6 +69,11 @@ html, body {
   }
 }
 
+.websy-btn {
+  border-radius: 5px;
+  background-color: transparent;
+}
+
 .cart {
   color: rgb(255, 255, 255);
   margin-top: 5px;
@@ -76,8 +81,8 @@ html, body {
 }
 
 .add-cart {
-  width: 200px;
-  background-color: rgb(8, 146, 8);
+  width: 120px;
+  background-color: rgb(57, 144, 57);
   color: rgb(255, 248, 248);
   padding: 10px;
   border-radius: 10px;
