navbar space-between 3 items

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -12,30 +12,6 @@ html, body {
   border: 0;
   background-color: transparent;
   color: rgb(232, 232, 232);
-  nav {
-    display: flex;
-    height: 82px;
-    padding: 20px 36px;
-    box-shadow: 0 2.98256px 7.4564px rgb(151, 150, 150);
-    background-color: #154281;
-    align-items: center;
-    justify-content: space-between;
-    img {
-      max-width: 200px;
-    }
-    ul {
-      display: flex;
-      justify-content: end;
-      height: 100%;
-    }
-    li {
-      display: flex;
-      list-style: none;
-      color: rgb(22, 20, 20);
-      padding: 5px;
-      height: 100%;
-    }
-  }
 }
 
 
@@ -54,11 +30,6 @@ html, body {
     img {
       max-width: 200px;
     }
-    ul {
-      display: flex;
-      justify-content: end;
-      height: 100%;
-    }
     li {
       display: flex;
       list-style: none;
@@ -66,6 +37,12 @@ html, body {
       padding: 5px;
       height: 100%;
     }
+  }
+  .central-triggers {
+    display: flex;
+  }
+  .right-triggers {
+    display: flex;
   }
 }
 
