footer added w dark mode

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -74,6 +74,14 @@ html, body {
   position: relative;
 }
 
+.sale-banner {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+  height: 10%;
+  background-color: transparent;
+}
 
 h3 {
   font-weight: 100;
@@ -159,6 +167,9 @@ p {
     border: 1px solid rgb(255, 251, 251);
     margin: 5px;
   }
+  footer {
+    background-color: #2c2b3f;
+  }
 }
 
 .apple-logo {
@@ -215,3 +226,22 @@ p {
 .top-picks {
   text-align: center;
 }
+
+footer {
+  background-color: #eeeeee;
+  padding-bottom: 20px;
+  li {
+    list-style: none;
+    margin: 10px;
+  }
+}
+.footer-p {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-parent {
+  display: flex;
+  justify-content: center;
+}
+
