--- a/src/html/views/cart.html
+++ b/src/html/views/cart.html
@@ -1,6 +1,6 @@
 <div class="websy-view" data-view="cart">
   
   <div class="cart-page">
-        <h3>Shopping Cart</h3>
-
+        <h3 class="cart-text">Shopping Cart</h3>
+<p>Your cart is empty! <u><a class="websy-trigger" data-view="home">Take a look around...</a></u></p>
 </div>
