--- a/src/less/main.less
+++ b/src/less/main.less
@@ -168,7 +168,10 @@ p {
     margin: 5px;
   }
   footer {
-    background-color: #2c2b3f;
+    background-color: #534f92;
+  }
+  u {
+    color: rgb(178, 29, 29);
   }
 }
 
@@ -245,3 +248,17 @@ footer {
   justify-content: center;
 }
 
+#map {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+u {
+  color: rgb(30, 30, 215);
+  margin-left: 5px;
+}
+
+.cart-text {
+  margin-left: 11px;
+}
