--- a/src/less/main.less
+++ b/src/less/main.less
@@ -173,6 +173,13 @@ p {
   u {
     color: rgb(178, 29, 29);
   }
+  .websy-dropdown-header svg {
+    stroke: rgb(232, 232, 232);
+    fill: rgb(232, 232, 232);
+  }
+  .websy-dropdown-items li {
+    color: rgb(0, 0, 0);
+  }
 }
 
 .apple-logo {
@@ -231,16 +238,17 @@ p {
 }
 
 footer {
+  margin-top: auto;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
   background-color: #eeeeee;
   padding-bottom: 20px;
+  box-sizing: border-box;
   li {
     list-style: none;
     margin: 10px;
   }
-}
-.footer-p {
-  display: flex;
-  justify-content: center;
 }
 
 .footer-parent {
@@ -261,4 +269,38 @@ u {
 
 .cart-text {
   margin-left: 11px;
+}
+
+.sec-container {
+  min-height: ~'calc(100vh - 215px)';
+}
+
+.collapsible {
+  background-color: rgb(203, 203, 203);
+  color: rgb(65, 63, 63);
+  cursor: pointer;
+  padding: 18px;
+  width: 71%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  margin: 5px;
+}
+.active, .collapsible:hover {
+  background-color: rgb(204, 204, 204);
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  width: 71%;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+
+.faqs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
