--- a/src/less/main.less
+++ b/src/less/main.less
@@ -180,6 +180,9 @@ p {
   .websy-dropdown-items li {
     color: rgb(0, 0, 0);
   }
+  .content {
+    color: rgb(0, 0, 0);
+  }
 }
 
 .apple-logo {
