--- a/src/less/main.less
+++ b/src/less/main.less
@@ -307,3 +307,21 @@ u {
   flex-direction: column;
   align-items: center;
 }
+
+.cart-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cart-item {
+  width: 70%;
+  height: 85%;
+  background-color: #ffffff;
+  border: solid 1px rgb(168, 168, 168);
+  border-radius: 20px;
+  box-shadow: rgba(166, 204, 251, .24) .3px 3px 8px;
+  padding: 20px;
+  margin: 20px;
+}
+
