--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -1,7 +1,7 @@
 <div class="websy-view" data-view="home">
 
   <div class="hero-image">
-    <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img21/Wireless/Zimrane/Feb22/FPF_Feb22/PC_stripe_1.jpg" width="900px">
+    <img id="home-img" src="https://images-eu.ssl-images-amazon.com/images/G/31/img21/Wireless/Zimrane/Feb22/FPF_Feb22/PC_stripe_1.jpg" width="900px">
     <div class="hero-text">
     </div>
   </div>
