dark mode logo hide and show

--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -21,8 +21,12 @@
         maiores ad architecto nobis reiciendis.</p>
     
 <hr>
+  <div class="tps-white">
+  <img class="tps-white-logo" src="./resources/tpslogowhite.png">
+  <img class="dark-tps" src="./resources/darkmodelogo.png">
+  </div>
 
-  
+
 <div class="filters">
      <div id="dropdown-2"style="width: 150px; height: 50px; position: relative; text-align: center;">
 
