--- a/src/less/main.less
+++ b/src/less/main.less
@@ -33,6 +33,19 @@ nav {
   display: flex;
 }
 
+.tps-logo {
+  width: 100px;
+}
+
+.tps-white {
+  display: flex;
+  justify-content: center;
+}
+
+.tps-white-logo {
+  width: 200px;
+}
+
 .hamburger {
   display: none;
 }
@@ -163,8 +176,12 @@ p {
   margin-top: auto;
 }
 
+.dark-tps {
+  display: none;
+}
+
 .dark-mode {
-  background-color: #02012e;
+  background-color: #02014b;
   color: rgb(232, 232, 232);
   .card {
     &:hover {
@@ -200,6 +217,14 @@ p {
   }
   .content {
     color: rgb(0, 0, 0);
+  }
+  .tps-white-logo {
+    display: none;
+  }
+  .dark-tps {
+    display: flex;
+    justify-content: center;
+    width: 200px;
   }
 }
 
