store locator page update

--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -15,10 +15,10 @@
     Ratione et possimus dolor quaerat, culpa quos aperiam
     quo pariatur excepturi nam in facilis tenetur quisquam nostrum. 
     Doloribus iure maiores aperiam quaerat?</p>
-  
-    <p style="text-align: center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi aperiam similique praesentium doloremque dolores doloribus deserunt mollitia dolorum?
-       Sed explicabo expedita voluptatibus officia officiis asperiores
-        maiores ad architecto nobis reiciendis.</p>
+
+<div class="carousel" id="carousel">
+
+</div>
     
 <hr>
   <div class="tps-white">
