--- a/src/less/main.less
+++ b/src/less/main.less
@@ -147,10 +147,13 @@ p {
   border-radius: 20px;
   padding: 40px;
   &:hover {
-    background-color: rgb(232, 232, 232);
+    background-color: rgb(245, 245, 245);
   }
 }
 
+span {
+  color: rgb(125, 125, 241);
+}
 .card--image {
   width: 100%;
   border-radius: 9px;
@@ -203,7 +206,7 @@ p {
     margin: 5px;
   }
   footer {
-    background-color: #534f92;
+    background-color: #154281;
   }
   u {
     color: rgb(178, 29, 29);
@@ -226,6 +229,17 @@ p {
     justify-content: center;
     width: 200px;
   }
+  .cart-item {
+    background-color: #02014b;
+  }
+}
+
+.remove-btn {
+  width: 120px;
+  background-color: rgb(242, 78, 63);
+  color: rgb(255, 248, 248);
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .apple-logo {
