--- a/src/html/views/stores.html
+++ b/src/html/views/stores.html
@@ -15,4 +15,15 @@
         });
         </script>
 </div>
+
+<p style="text-align:center">Visit your nearest shop and one of our experts will be on hand to help you make the best choice for you and your new phone</p>
+
+<ul>
+  <li><span>Barcelona</span> | Ronda Sant Antoni </li>
+  <li><span>Barcelona</span> | Travessera de Gracia </li>
+  <li> <span>Mataró</span> | Bruc </li>
+  <li><span>Vilanova I La Geltru</span> | Rambla Principal </li>
+  <li><span>Sant Boi de Llobregat</span> | Las Salinas </li>
+  <li><span>Cabrera de Mar</span> | Carrefour Cabrera de Mar </li>
+</ul>
   </div>
