--- a/src/less/main.less
+++ b/src/less/main.less
@@ -51,6 +51,15 @@ nav {
   display: none;
 }
 
+.store-offers {
+  border: 1px dashed rgb(0, 0, 0);
+  display: block;
+  width: 700px;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 @media ( max-width : 700px ) {
   .hamburger {
     border: 0;
