--- a/src/less/main.less
+++ b/src/less/main.less
@@ -56,6 +56,7 @@ nav {
   display: block;
   width: 700px;
   text-align: center;
+  margin-top: 20px;
   margin-right: auto;
   margin-left: auto;
 }
