--- a/src/less/main.less
+++ b/src/less/main.less
@@ -403,3 +403,16 @@ u {
 .myStyle {
   color: rgb(142, 21, 21);
 }
+
+#checkout-btn {
+  width: 80px;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 248, 248);
+  padding: 10px;
+  border-radius: 10px;
+}
+.checkout-btn-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
