--- a/src/less/main.less
+++ b/src/less/main.less
@@ -358,7 +358,7 @@ u {
   font-size: 15px;
   margin: 5px;
 }
-.active, .collapsible:hover {
+.collapsible.active, .collapsible:hover {
   background-color: rgb(204, 204, 204);
 }
 
@@ -415,4 +415,8 @@ u {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.carousel {
+  height: 400px;
 }
