--- a/src/html/views/cart.html
+++ b/src/html/views/cart.html
@@ -3,7 +3,7 @@
   <div class="cart-page">
     <div class="checkout-btn-flex">
       <h3 class="cart-text">Shopping Cart</h3>
-    <button class="websy-trigger nav-item nav-link" id="checkout-btn" data-view="notFound">Checkout</button>
+    <button class="websy-trigger nav-item nav-link" id="checkout-btn" data-view="checkout">Checkout</button>
   </div>
 <!-- <p>Your cart is empty! <u><a class="websy-trigger" data-view="home">Take a look around...</a></u></p> -->
     <div id="shopping-cart">
