--- a/src/html/views/stores.html
+++ b/src/html/views/stores.html
@@ -23,7 +23,7 @@
   </p>
 </div>
 
-<ul>
+<ul style="text-align:center" class="stores-list">
   <li><span>Barcelona</span> | Ronda Sant Antoni </li>
   <li><span>Barcelona</span> | Travessera de Gracia </li>
   <li> <span>Mataró</span> | Bruc </li>
