--- a/src/less/main.less
+++ b/src/less/main.less
@@ -449,9 +449,10 @@ u {
 
 .container {
   background-color: #f2f2f2;
-  padding: 5 20 15 20px;
   border: 1px solid rgb(211, 211, 211);
   border-radius: 3px;
+  margin: 35px;
+  padding: 10px;
 }
 
 input[ type = 'text' ] {
@@ -483,6 +484,8 @@ label {
   border-radius: 3px;
   cursor: pointer;
   font-size: 17px;
+  list-style: none;
+  text-align: center;
 }
 
 .btn:hover {
@@ -494,12 +497,7 @@ span.price {
   color: rgb(128, 128, 128);
 }
 
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
-@media ( max-width : 800px ) {
-  .row {
-    flex-direction: column-reverse;
-  }
-  .col-25 {
-    margin-bottom: 20px;
-  }
+.stores-list {
+  list-style: none;
+  margin-top: 40px;
 }
